data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2136.wast
;; 7. **Test Description**: Define a `block` where missing `end` in a nested `loop` causes potential indefinite execution without correct parsing and exit.    - **Constraint**: Ensures that blocks and loops are correctly nested preventing infinite loops due to missing end.

(assert_invalid
  (module
    (func $test_nested_block_missing_end
      (block
        (loop
          (i32.const 1)
          (br 0)
          ;; Missing 'end' for loop
      )
    )
  )
  "unexpected end of section or function"
)